--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="app">ddd</div>
+  <div id="app"></div>
   <script type="module" src="/src/logic.ts"></script>
   <script type="module" src="/src/main.ts"></script>
 </body>
